--- a/metro-app/frontend/package.json
+++ b/metro-app/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.26.2",
     "axios": "^0.19.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
