Rendered first subway stations in mapbox

--- a/metro-app/backend/.env
+++ b/metro-app/backend/.env
@@ -1,5 +1,5 @@
 PORT=3000
 ENV=development
-DB=mongodb+srv://Enrique:mongo_python_22kkww33@cluster0-q4bqy.mongodb.net/test?retryWrites=true&w=majority
+DB=mongodb+srv://Enrique:mongo_python_22kkww33@cluster0-q4bqy.mongodb.net/nueva_db?retryWrites=true&w=majority
 FRONTENDPOINT=http://localhost:3001
 SECRET=1r0nhack3r
