--- a/metro-app/frontend/package.json
+++ b/metro-app/frontend/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "antd": "^3.26.2",
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
+    "react-map-gl": "^5.1.3",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.1.2"
   },
