--- a/metro-app/frontend/package.json
+++ b/metro-app/frontend/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.0.2",
+    "@mapbox/mapbox-gl-geocoder": "^4.5.0",
     "antd": "^3.26.2",
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
+    "mapbox-gl": "^1.6.0",
     "react": "^16.10.0",
     "react-dom": "^16.10.0",
     "react-map-gl": "^5.1.3",
