--- a/metro-app/frontend/package.json
+++ b/metro-app/frontend/package.json
@@ -7,9 +7,11 @@
     "@mapbox/mapbox-gl-geocoder": "^4.5.0",
     "antd": "^3.26.2",
     "axios": "^0.19.0",
+    "chart.js": "^2.9.3",
     "dotenv": "^8.2.0",
     "mapbox-gl": "^1.6.0",
     "react": "^16.10.0",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.10.0",
     "react-map-gl": "^5.1.3",
     "react-router-dom": "^5.1.1",
